tests/test-files/parse-while-let.txt
================================================================================
100 Malformed while-let expression
================================================================================

(package test-parser)

(define f (while-let))

--------------------------------------------------------------------------------

error: Malformed while-let expression
  --> test:3:20
   |
 3 |  (define f (while-let))
   |                      ^ expected pattern

================================================================================
101 Malformed while-let expression
================================================================================

(package test-parser)

(define f (while-let (Some x)))

--------------------------------------------------------------------------------

error: Malformed while-let expression
  --> test:3:29
   |
 3 |  (define f (while-let (Some x)))
   |                               ^ expected =

================================================================================
102 Malformed while-let expression
================================================================================

(package test-parser)

(define f (while-let (Some x) z))

--------------------------------------------------------------------------------

error: Malformed while-let expression
  --> test:3:30
   |
 3 |  (define f (while-let (Some x) z))
   |                                ^ expected =

================================================================================
103 Malformed while-let expression
================================================================================

(package test-parser)

(define f (while-let (Some x) = (moo)))

--------------------------------------------------------------------------------

error: Malformed while-let expression
  --> test:3:37
   |
 3 |  (define f (while-let (Some x) = (moo)))
   |                                       ^ expected body

================================================================================
104 Malformed while-let expression
================================================================================

(package test-parser)

(define f (while-let :label (Some x) = (moo)))

--------------------------------------------------------------------------------

error: Malformed while-let expression
  --> test:3:44
   |
 3 |  (define f (while-let :label (Some x) = (moo)))
   |                                              ^ expected body

================================================================================
105 Malformed while-let expression
================================================================================

(package test-parser)

(define f (while-let :label))

--------------------------------------------------------------------------------

error: Malformed while-let expression
  --> test:3:27
   |
 3 |  (define f (while-let :label))
   |                             ^ expected pattern

================================================================================
106 Malformed while-let expression
================================================================================

(package test-parser)

(define f (while-let :label foo))

--------------------------------------------------------------------------------

error: Malformed while-let expression
  --> test:3:31
   |
 3 |  (define f (while-let :label foo))
   |                                 ^ expected =

================================================================================
107 Malformed while-let expression
================================================================================

(package test-parser)

(define f (while-let :label foo nope))

--------------------------------------------------------------------------------

error: Malformed while-let expression
  --> test:3:32
   |
 3 |  (define f (while-let :label foo nope))
   |                                  ^^^^ expected =

================================================================================
108 Malformed while-let expression
================================================================================

(package test-parser)

(define f (while-let :label foo = bar))

--------------------------------------------------------------------------------

error: Malformed while-let expression
  --> test:3:37
   |
 3 |  (define f (while-let :label foo = bar))
   |                                       ^ expected body
